--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -54,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: buildandtest
     environment:
-      name: 'Development'
+      name: 'https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for'
     steps:
     
     #Download the publish files created in previous job
